# blender-mcp

./: README.md  pyproject.toml  server.py
blender/: __init__.py  executor.py  uv_tools.py
examples/: create_save_blend.py  hello_cube.py  modify_blend_file.py  uv_mapping.py
scripts/: __init__.py  manager.py
utils/: helpers.py  uv_integration.py  uv_manager.py
